--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # compiled output
 /dist
 /node_modules
+client/node_modules
+server/node_modules
 
 # Logs
 logs
@@ -35,3 +37,5 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 .env
+client/.env
+server/.env
