--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
+    "express": "^4.18.2",
     "mongoose": "^7.2.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
@@ -42,7 +43,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/passport-local": "^1.0.35",
