--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.17.3",
     "mongoose": "^7.2.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
